Update Migrations and support for multiple travel modes in trip
